Fix button alignment

--- a/private/src/editor.scss
+++ b/private/src/editor.scss
@@ -144,3 +144,7 @@
 .fse .donation .btn {
   font-family: var(--wp--preset--font-family--secondary) !important;
 }
+
+.wp-block-amnesty-core-hero .donation .btn {
+  justify-content: center;
+}
